<resources>
    <string name="app_name">Poliban</string>
    <string name="logo">logo</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AppNameUpp">POLIBAN</string>
    <string name="login_with_email_password">Login with email/password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome_to_poliban">Welcome To POLIBAN!</string>
    <string name="direction">Direction*</string>
    <string name="postal_code">Postal Code*</string>
    <string name="phone">Phone*</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name*</string>
    <string name="change_your_profile">Change your Profile</string>
    <string name="update">Update</string>
    <string name="pay">Pay</string>
    <string name="settings">Settings</string>
    <string name="wallet">Wallet</string>
    <string name="home">Home</string>
    <string name="iban">IBAN</string>
    <string name="owner">Owner</string>
    <string name="credit">Credit</string>
    <string name="chatbot">ChatBot</string>
    <string name="chatBotTitle">Chat con Poliban</string>
    <string name="introduce_tu_mensaje">Introduce tu mensaje</string>
    <string name="exp_date">Exp. Date:</string>
    <string name="wasted_balance">Wasted Balance</string>
    <string name="infoBtn">infoBtn</string>
    <string name="deleteBtn">deleteBtn</string>
    <string name="payBtn">payBtn</string>
    <string name="blockBtn">blockBtn</string>
    <string name="back">back</string>
    <string name="forward">forward</string>
    <string name="paymentLogo">paymentLogo</string>
    <string name="expenditure">Expenditure</string>
    <string name="last_month">Last Month</string>
    <string name="iconRevenue">iconRevenue</string>
    <string name="bankLogo">bankLogo</string>
    <string name="cve">CVE:</string>
    <string name="current_balance">Current Balance</string>
    <string name="tell_me_some_information_from_your_new_bank_account">Tell me some information from your new bank account!</string>
    <string name="create">Create</string>
    <string name="principal_owner">Principal Owner</string>
    <string name="businessAccount">Business Account</string>
    <string name="invest">Invest</string>
    <string name="transfer">Transfer</string>
    <string name="send">Send</string>
    <string name="delete_account_from_database">Delete account from database!</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="balance">BALANCE:</string>
    <string name="to_come">TO COME:</string>
    <string name="text_ejemplo">Text Ejemplo</string>
    <string name="toText">To: </string>
    <string name="fromText">From: </string>
    <string name="futureText">F:</string>
    <string name="lastWeek">Last Week</string>
    <string name="lastMonth">Last Month</string>
    <string name="laterallogo">lateralLogo</string>
    <string name="iban_example">ES79 2100 0813 6101 2345 6789</string>
    <string name="balance_example">1.640</string>
    <string name="euro_symbol">€</string>
    <string name="username_example">UserName</string>
    <string name="cif">CIF</string>
    <string name="banklogo">bankLogo</string>
    <string name="revenue">Revenue</string>
    <string name="iconexpenditure">iconExpenditure</string>
    <string name="date_example">may 2023</string>
    <string name="iconmaps">iconMaps</string>
    <string name="future">FUTURE</string>
    <string name="bttnaddwalletcard">bttnAddWalletCard</string>
    <string name="balance_card_noshow">* * * *. * * €</string>
    <string name="ibanNoShow">* * * * * * * * * * * * * * * *</string>
    <string name="cvvNoShow">***</string>
    <string name="dateNoShow">**/**</string>
    <string name="make_a_transfer_in_the_easiest_way">Make a transfer in the easiest way!</string>
    <string name="user_message">User message</string>
    <string name="usericon">userIcon</string>
    <string name="botlogo">botLogo</string>
    <string name="bot_message">Bot message</string>
    <string name="reason">Reason*</string>
    <string name="quantity">Quantity*</string>
    <string name="accepted">ACCEPTED</string>
    <string name="money_you_need">How many money do you need?</string>
    <string name="request">REQUEST</string>
    <string name="enter_message">Enter Message</string>
</resources>