<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <PreferenceCategory app:title="@string/messages_header"
        app:icon="@drawable/ic_baseline_message_24">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Data processing"
        app:icon="@drawable/ic_baseline_perm_data_setting_24">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="Use the asynchronous way."
            app:summaryOn="Using the synchronous way"
            app:title="Method to save data" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Notifications"
        app:icon="@drawable/ic_baseline_notifications_24">

        <SeekBarPreference
            android:key="volume_notifications"
            android:title="Volume"
            app:showSeekBarValue="true"
            android:defaultValue="50"/>

        <SwitchPreferenceCompat
            android:key="notifications"
            app:title="Disable notifications"
            android:summaryOff="Yes I want to receive notifications"
            android:summaryOn="No, I don't want to receive notifications"/>
    </PreferenceCategory>
</PreferenceScreen>