<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="315dp"
    android:layout_height="175dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/numAccountText">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/walletItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_radius"
        android:backgroundTint="#D3E1FF"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/currentBalanceWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_font"
            android:text="@string/current_balance"
            android:textAppearance="@style/lettersDataBank"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/currentBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/balance_card_noshow"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentBalanceWord" />


        <ImageView
            android:id="@+id/entityCardLogo"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:contentDescription="@string/paymentLogo"
            android:src="@drawable/icon_poliban"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cardNumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/ibanNoShow"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/whoseTextCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentBalance" />

        <TextView
            android:id="@+id/whoseTextCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_font"
            android:text="@string/owner"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardNumText" />

        <TextView
            android:id="@+id/cveTextCard"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:fontFamily="@font/montserrat_font"
            android:text="@string/cve"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cveInfoCard"
            app:layout_constraintStart_toEndOf="@id/whoseTextCard"
            app:layout_constraintTop_toBottomOf="@+id/cardNumText" />

        <TextView
            android:id="@+id/cveInfoCard"
            android:layout_width="35dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/cvvNoShow"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/expDateTextCard"
            app:layout_constraintStart_toEndOf="@id/cveTextCard" />

        <TextView
            android:id="@+id/expDateTextCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_font"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/exp_date"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/expDateInfoCard"
            app:layout_constraintStart_toEndOf="@id/cveInfoCard"
            app:layout_constraintTop_toBottomOf="@+id/cardNumText"
            />

        <TextView
            android:id="@+id/expDateInfoCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/dateNoShow"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/expDateTextCard"
            app:layout_constraintTop_toBottomOf="@+id/cardNumText" />

        <ImageView
            android:id="@+id/backArrowCard"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:contentDescription="@string/back"
            android:src="@drawable/arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/forwardArrowCard"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:contentDescription="@string/forward"
            android:src="@drawable/arrow_forward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_radius"
        android:backgroundTint="#804B5365"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_walletCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:contentDescription="@string/bttnaddwalletcard"
            android:src="@drawable/add_iconbtn"
            app:backgroundTint="@color/orange_poliban"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:maxImageSize="35dp"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>