<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_poliban"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/registerForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:alignContent="center"
            app:alignItems="center"
            app:flexWrap="wrap"
            app:justifyContent="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:alignContent="center"
            app:alignItems="center"
            app:flexWrap="wrap"
            app:justifyContent="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/welcome_to_poliban"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/icon_poliban"
                android:layout_width="45dp"
                android:layout_height="35dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/icon_poliban" />

            <ImageView
                android:id="@+id/profileImg"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/profile_img" />
        </com.google.android.flexbox.FlexboxLayout>

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints="Email*"
                android:background="@drawable/border_radius"
                android:backgroundTint="@color/blue_light"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white_transparent" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints="Name*"
                android:background="@drawable/border_radius"
                android:backgroundTint="@color/blue_light"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white_transparent" />

            <EditText
                android:id="@+id/directionEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints="Direction*"
                android:background="@drawable/border_radius"
                android:backgroundTint="@color/blue_light"
                android:hint="@string/direction"
                android:inputType="textPostalAddress"
                android:padding="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white_transparent" />

            <EditText
                android:id="@+id/cpEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints="Postal Code*"
                android:background="@drawable/border_radius"
                android:backgroundTint="@color/blue_light"
                android:hint="@string/postal_code"
                android:inputType="number"
                android:padding="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white_transparent" />

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints="Phone*"
                android:background="@drawable/border_radius"
                android:backgroundTint="@color/blue_light"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white_transparent" />


            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints="@string/password"
                android:background="@drawable/border_radius"
                android:backgroundTint="@color/blue_light"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white_transparent" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/registerButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/orange_light"
                    android:text="@string/register"
                    android:textColor="@color/white" />


                <Button
                    android:id="@+id/cancelButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/blue_light"
                    android:text="@string/cancel"
                    android:textColor="@color/white" />
            </LinearLayout>


        </com.google.android.flexbox.FlexboxLayout>

        <com.mrtyvz.archedimageprogress.ArchedImageProgressBar
            android:id="@+id/custom_imageProgressBar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
